KEC.Deployment/KEC.Deployment.BuildServers/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "virtualMachines_kecbuildserver1_name": {
      "defaultValue": "kecbuildserver1",
      "type": "String"
    },
    "networkInterfaces_kecbuildserver13_name": {
      "defaultValue": "kecbuildserver13",
      "type": "String"
    },
    "publicIPAddresses_kecbuildserver1_ip_name": {
      "defaultValue": "kecbuildserver1-ip",
      "type": "String"
    },
    "virtualNetworks_kecbuildservers_vnet_name": {
      "defaultValue": "kecbuildservers-vnet",
      "type": "String"
    },
    "networkSecurityGroups_kecbuildserver1_nsg_name": {
      "defaultValue": "kecbuildserver1-nsg",
      "type": "String"
    },
    "availabilitySets_kecbuildserversavailabilityset_name": {
      "defaultValue": "kecbuildserversavailabilityset",
      "type": "String"
    },
    "subnets_default_name": {
      "defaultValue": "default",
      "type": "String"
    },
    "securityRules_default_allow_rdp_name": {
      "defaultValue": "default-allow-rdp",
      "type": "String"
    },
    "virtualMachines_kecbuildserver1_id": {
      "defaultValue": "/subscriptions/8eaca2a2-dc2f-4e58-8ae2-28580934830b/resourceGroups/kecbuildservers/providers/Microsoft.Compute/disks/kecbuildserver1_OsDisk_1_b68d2b6631f14d09ade52d0d2e9ab2a1",
      "type": "String"
    }
  },
  "variables": {},
  "resources": [
    {
      "comments": "Generalized from resource: '/subscriptions/8eaca2a2-dc2f-4e58-8ae2-28580934830b/resourceGroups/kecbuildservers/providers/Microsoft.Compute/availabilitySets/kecbuildserversavailabilityset'.",
      "type": "Microsoft.Compute/availabilitySets",
      "sku": {
        "name": "Aligned"
      },
      "name": "[parameters('availabilitySets_kecbuildserversavailabilityset_name')]",
      "apiVersion": "2017-12-01",
      "location": "westeurope",
      "scale": null,
      "properties": {
        "platformUpdateDomainCount": 10,
        "platformFaultDomainCount": 3,
        "virtualMachines": [
          {
            "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_kecbuildserver1_name'))]"
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_kecbuildserver1_name'))]"
      ]
    },
    {
      "comments": "Generalized from resource: '/subscriptions/8eaca2a2-dc2f-4e58-8ae2-28580934830b/resourceGroups/kecbuildservers/providers/Microsoft.Compute/virtualMachines/kecbuildserver1'.",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[parameters('virtualMachines_kecbuildserver1_name')]",
      "apiVersion": "2017-12-01",
      "location": "westeurope",
      "scale": null,
      "properties": {
        "availabilitySet": {
          "id": "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySets_kecbuildserversavailabilityset_name'))]"
        },
        "hardwareProfile": {
          "vmSize": "Standard_F8s"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftVisualStudio",
            "offer": "VisualStudio",
            "sku": "VS-2017-Comm-WS2016",
            "version": "latest"
          },
          "osDisk": {
            "osType": "Windows",
            "name": "[concat(parameters('virtualMachines_kecbuildserver1_name'),'_OsDisk_1_b68d2b6631f14d09ade52d0d2e9ab2a1')]",
            "createOption": "FromImage",
            "caching": "ReadWrite",
            "managedDisk": {
              "storageAccountType": "Premium_LRS",
              "id": "[parameters('virtualMachines_kecbuildserver1_id')]"
            },
            "diskSizeGB": 128
          },
          "dataDisks": []
        },
        "osProfile": {
          "computerName": "[parameters('virtualMachines_kecbuildserver1_name')]",
          "adminUsername": "miyabi",
          "windowsConfiguration": {
            "provisionVMAgent": true,
            "enableAutomaticUpdates": true
          },
          "secrets": []
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_kecbuildserver13_name'))]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true,
            "storageUri": "https://backupvmdiag.blob.core.windows.net/"
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Compute/availabilitySets', parameters('availabilitySets_kecbuildserversavailabilityset_name'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_kecbuildserver13_name'))]"
      ]
    },
    {
      "comments": "Generalized from resource: '/subscriptions/8eaca2a2-dc2f-4e58-8ae2-28580934830b/resourceGroups/kecbuildservers/providers/Microsoft.Network/networkInterfaces/kecbuildserver13'.",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[parameters('networkInterfaces_kecbuildserver13_name')]",
      "apiVersion": "2018-02-01",
      "location": "westeurope",
      "scale": null,
      "properties": {
        "provisioningState": "Succeeded",
        "resourceGuid": "0a7ff5bc-724f-4ad3-9ad1-9a47d073dc17",
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "etag": "W/\"cc267b68-5192-45d1-80e0-55e3bdbeb0e7\"",
            "properties": {
              "provisioningState": "Succeeded",
              "privateIPAddress": "10.0.1.4",
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_kecbuildserver1_ip_name'))]"
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_kecbuildservers_vnet_name'), parameters('subnets_default_name'))]"
              },
              "primary": true,
              "privateIPAddressVersion": "IPv4"
            }
          }
        ],
        "dnsSettings": {
          "dnsServers": [],
          "appliedDnsServers": [],
          "internalDomainNameSuffix": "xdhdkukfqp3ehayo0s5y2iojhb.ax.internal.cloudapp.net"
        },
        "macAddress": "00-0D-3A-23-CA-19",
        "enableAcceleratedNetworking": false,
        "enableIPForwarding": false,
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_kecbuildserver1_nsg_name'))]"
        },
        "primary": true,
        "virtualMachine": {
          "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_kecbuildserver1_name'))]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_kecbuildserver1_ip_name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_kecbuildservers_vnet_name'), parameters('subnets_default_name'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_kecbuildserver1_nsg_name'))]",
        "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_kecbuildserver1_name'))]"
      ]
    },
    {
      "comments": "Generalized from resource: '/subscriptions/8eaca2a2-dc2f-4e58-8ae2-28580934830b/resourceGroups/kecbuildservers/providers/Microsoft.Network/networkSecurityGroups/kecbuildserver1-nsg'.",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('networkSecurityGroups_kecbuildserver1_nsg_name')]",
      "apiVersion": "2018-02-01",
      "location": "westeurope",
      "scale": null,
      "properties": {
        "provisioningState": "Succeeded",
        "resourceGuid": "abc73355-b0b8-4db2-855c-596749399a07",
        "securityRules": [
          {
            "name": "default-allow-rdp",
            "etag": "W/\"9c777d03-c59a-4c7a-98d3-3a8f7719c4b4\"",
            "properties": {
              "provisioningState": "Succeeded",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ],
        "defaultSecurityRules": [
          {
            "name": "AllowVnetInBound",
            "etag": "W/\"9c777d03-c59a-4c7a-98d3-3a8f7719c4b4\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow inbound traffic from all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowAzureLoadBalancerInBound",
            "etag": "W/\"9c777d03-c59a-4c7a-98d3-3a8f7719c4b4\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow inbound traffic from azure load balancer",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 65001,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyAllInBound",
            "etag": "W/\"9c777d03-c59a-4c7a-98d3-3a8f7719c4b4\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Deny all inbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowVnetOutBound",
            "etag": "W/\"9c777d03-c59a-4c7a-98d3-3a8f7719c4b4\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow outbound traffic from all VMs to all VMs in VNET",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 65000,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowInternetOutBound",
            "etag": "W/\"9c777d03-c59a-4c7a-98d3-3a8f7719c4b4\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Allow outbound traffic from all VMs to Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 65001,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyAllOutBound",
            "etag": "W/\"9c777d03-c59a-4c7a-98d3-3a8f7719c4b4\"",
            "properties": {
              "provisioningState": "Succeeded",
              "description": "Deny all outbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 65500,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      },
      "dependsOn": []
    },
    {
      "comments": "Generalized from resource: '/subscriptions/8eaca2a2-dc2f-4e58-8ae2-28580934830b/resourceGroups/kecbuildservers/providers/Microsoft.Network/publicIPAddresses/kecbuildserver1-ip'.",
      "type": "Microsoft.Network/publicIPAddresses",
      "sku": {
        "name": "Basic",
        "tier": "Regional"
      },
      "name": "[parameters('publicIPAddresses_kecbuildserver1_ip_name')]",
      "apiVersion": "2018-02-01",
      "location": "westeurope",
      "scale": null,
      "properties": {
        "provisioningState": "Succeeded",
        "resourceGuid": "c7eb9754-1c93-47b6-be93-8be50e12aa9e",
        "ipAddress": "104.40.253.88",
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Dynamic",
        "idleTimeoutInMinutes": 4,
        "ipTags": []
      },
      "dependsOn": []
    },
    {
      "comments": "Generalized from resource: '/subscriptions/8eaca2a2-dc2f-4e58-8ae2-28580934830b/resourceGroups/kecbuildservers/providers/Microsoft.Network/virtualNetworks/kecbuildservers-vnet'.",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('virtualNetworks_kecbuildservers_vnet_name')]",
      "apiVersion": "2018-02-01",
      "location": "westeurope",
      "scale": null,
      "properties": {
        "provisioningState": "Succeeded",
        "resourceGuid": "5135ceb8-8345-43fa-830e-d4bf8e21c939",
        "addressSpace": {
          "addressPrefixes": [
            "10.0.1.0/24"
          ]
        },
        "subnets": [
          {
            "name": "default",
            "etag": "W/\"53f21a50-eb04-403a-a052-7d0ab1b7357b\"",
            "properties": {
              "provisioningState": "Succeeded",
              "addressPrefix": "10.0.1.0/24"
            }
          }
        ],
        "virtualNetworkPeerings": [],
        "enableDdosProtection": false,
        "enableVmProtection": false
      },
      "dependsOn": []
    },
    {
      "comments": "Generalized from resource: '/subscriptions/8eaca2a2-dc2f-4e58-8ae2-28580934830b/resourceGroups/kecbuildservers/providers/Microsoft.Network/networkSecurityGroups/kecbuildserver1-nsg/securityRules/default-allow-rdp'.",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('networkSecurityGroups_kecbuildserver1_nsg_name'), '/', parameters('securityRules_default_allow_rdp_name'))]",
      "apiVersion": "2018-02-01",
      "scale": null,
      "properties": {
        "provisioningState": "Succeeded",
        "protocol": "TCP",
        "sourcePortRange": "*",
        "destinationPortRange": "3389",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 1000,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_kecbuildserver1_nsg_name'))]"
      ]
    },
    {
      "comments": "Generalized from resource: '/subscriptions/8eaca2a2-dc2f-4e58-8ae2-28580934830b/resourceGroups/kecbuildservers/providers/Microsoft.Network/virtualNetworks/kecbuildservers-vnet/subnets/default'.",
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "name": "[concat(parameters('virtualNetworks_kecbuildservers_vnet_name'), '/', parameters('subnets_default_name'))]",
      "apiVersion": "2018-02-01",
      "scale": null,
      "properties": {
        "provisioningState": "Succeeded",
        "addressPrefix": "10.0.1.0/24"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_kecbuildservers_vnet_name'))]"
      ]
    }
  ]
}
